openbao/Namespace.openbao.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: openbao
  namespace: openbao
