openbao/Pod.openbao-server-test.k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  name: openbao-server-test
  namespace: openbao
spec:
  containers:
    - command:
        - /bin/sh
        - -c
        - |
          echo "Checking for sealed info in 'bao status' output"
          ATTEMPTS=10
          n=0
          until [ "$n" -ge $ATTEMPTS ]
          do
            echo "Attempt" $n...
            bao status -format yaml | grep -E '^sealed: (true|false)' && break
            n=$((n+1))
            sleep 5
          done
          if [ $n -ge $ATTEMPTS ]; then
            echo "timed out looking for sealed info in 'bao status' output"
            exit 1
          fi

          exit 0
      image: quay.io/openbao/openbao:2.6.1
      imagePullPolicy: IfNotPresent
      name: openbao-server-test
      securityContext:
        allowPrivilegeEscalation: false
  restartPolicy: Never
  securityContext:
    fsGroup: 1000
    runAsGroup: 1000
    runAsNonRoot: true
    runAsUser: 100
    seccompProfile:
      type: RuntimeDefault
