openbao/Service.openbao-internal.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao
    helm.sh/chart: openbao-0.29.0
    openbao-internal: "true"
  name: openbao-internal
  namespace: openbao
spec:
  clusterIP: None
  ports:
    - appProtocol: HTTP
      name: http
      port: 8200
      targetPort: 8200
    - name: https-internal
      port: 8201
      targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: openbao
    component: server
