openbao/HTTPRoute.openbao.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  hostnames:
    - openbao.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: openbao
          port: 8200
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
